DataTable Template is Added  now need to add functionality and actual Data to the view

--- a/WareHouseMgmt/src/main/resources/static/css/DashboardStyle.css
+++ b/WareHouseMgmt/src/main/resources/static/css/DashboardStyle.css
@@ -3,3 +3,11 @@
 #justLetsCCCSS{
 	background-color: red;
 }
+
+td.details-control {
+    background: url('https://www.datatables.net/examples/resources/details_open.png') no-repeat center center;
+    cursor: pointer;
+}
+tr.details td.details-control {
+    background: url('https://www.datatables.net/examples/resources/details_close.png') no-repeat center center;
+}
