Added Changes on Contact US pages using validation made ajax Call to DB Created ContactUs Table Created Enity Rep and Service Layer to initiate DB Calls

--- a/WareHouseMgmt/src/main/resources/static/css/ContactStyle.css
+++ b/WareHouseMgmt/src/main/resources/static/css/ContactStyle.css
@@ -24,3 +24,10 @@ body {
   border: none !important;
   font-size: 20px !important;
 }
+
+.errorChecker{
+	visibility: hidden;
+    background-color: black;
+    color: red;
+}
+
