changed background color and changed font size of errorChecker

--- a/WareHouseMgmt/src/main/resources/static/css/AddProductStyle.css
+++ b/WareHouseMgmt/src/main/resources/static/css/AddProductStyle.css
@@ -24,8 +24,9 @@ body {
 
 .errorChecker{
 	visibility: hidden;
-    background-color: black;
+    background-color: white;
     color: red;
+    font-size: small;
 }
 
 .hideIt{
