changed background color and changed font size of errorChecker

--- a/WareHouseMgmt/src/main/resources/static/css/ContactStyle.css
+++ b/WareHouseMgmt/src/main/resources/static/css/ContactStyle.css
@@ -27,7 +27,8 @@ body {
 
 .errorChecker{
 	visibility: hidden;
-    background-color: black;
+    background-color: white;
     color: red;
+    font-size: small;
 }
 
